# Petra

./: .rustfmt.toml  Cargo.toml
demo/: Cargo.toml
demo/shaders/: compute.wgsl  quad.wgsl
demo/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs  swizzle.rs  vertex.rs
math/: Cargo.toml
math/src/: lib.rs  mat.rs  quat.rs  vec.rs
petra/: Cargo.toml
petra/examples/cube/: cube.wgsl  main.rs
petra/examples/triangle/: main.rs  triangle.wgsl
petra/src/: bind_group.rs  buffer.rs  compute_pass.rs  compute_pipeline.rs  lib.rs  manager.rs  render_pass.rs  render_pipeline.rs  sampler.rs  texture.rs  vertex.rs
render_lib/: Cargo.toml
render_lib/src/: bind_group.rs  buffer.rs  handle.rs  lib.rs  manager.rs  render_pass.rs  render_pipeline.rs  shader.rs  texture.rs  vertex.rs
render_test/: Cargo.toml
render_test/shaders/: triangle.wgsl
render_test/src/: main.rs
