[package]
name = "render_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render_lib = { path = "../render_lib" }
math = { path = "../math" }
winit = "0.28"
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }